<resources>
    <string name="app_name">Initiative</string>
    <string name="dice_hint">Amount of Dice</string>
    <string name="roll_button">Roll!</string>
    <string name="name_hint">Name</string>
    <string name="saving_throw_label">Saving Throws</string>
    <string name="skills_label">Skills</string>
    <string name="strength_label">Strength</string>
    <string name="dexterity_label">Dexterity</string>
    <string name="constitution_label">Constitution</string>
    <string name="intelligence_label">Intelligence</string>
    <string name="wisdom_label">Wisdom</string>
    <string name="charisma_label">Charisma</string>
    <string name="equipment_label">Inventory and Equipment</string>
    <string name="roll_stats_button">Roll For Stats</string>
    <string name="menu_create_character">Create New Character</string>
    <string name="menu_edit_character">Edit Current Character</string>
    <string name="menu_roll">Roll</string>
    <string name="current_character">Current Character</string>
    <string name="inventory">Inventory</string>
    <string name="class_name">Class</string>
    <string name="modifier">Modifiers</string>
    <string name="dice_amount">Amount of Dice</string>
    <string name="dice_sides">Sides on Dice</string>
    <string name="modifier_hint">+/- a number</string>
</resources>
