<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bennettfalkenberg.initiative.DiceRollActivity"
    android:columnCount="3"
    android:padding="5dp"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/modifierText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:text="@string/modifier"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/diceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:text="@string/dice_amount"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/modifierValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:gravity="center"
        android:hint="@string/modifier_hint"
        android:inputType="numberSigned"/>

    <EditText
        android:id="@+id/amountOfDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:hint="@string/dice_hint"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:gravity="center"
        android:inputType="number"/>

    <TextView
        android:id="@+id/sidesOnDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:text="@string/dice_sides"
        android:gravity="center"/>
    <Spinner
        android:id="@+id/typeOfDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="0"/>

    <TextView
        android:id="@+id/rollResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="1"
        android:gravity="center"
        android:textSize="75dp"/>

    <Button
        android:id="@+id/rollButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/roll_button"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_columnSpan="3"
        android:onClick="onRollClick"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:padding="10dp"/>


</GridLayout>
