<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bennettfalkenberg.initiative.CharacterActivity"
    android:columnCount="4"
    android:padding="5dp"
    android:background="@color/colorBackground">

    <Spinner
        android:id="@+id/raceSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:padding="5dp"/>
    <Spinner
        android:id="@+id/classSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="4"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"
        android:hint="@string/name_hint"
        android:layout_columnWeight="2"
        android:layout_rowWeight="1"
        android:padding="5dp"/>
    <Spinner
        android:id="@+id/alignmentSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/strengthLabel"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/strength_label"
        android:padding="5dp"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/savingThrowsLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/saving_throw_label"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/skillsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills_label"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"
        android:layout_columnWeight="2"
        android:layout_rowWeight="1"
        android:padding="5dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/strengthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:outlineProvider="paddedBounds"
        android:padding="5dp" />
    <TextView
        android:id="@+id/savingThrowsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnSpan="1"
        android:layout_rowSpan="4"
        android:layout_rowWeight="4"
        android:layout_columnWeight="1"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/skillsValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowSpan="4"
        android:layout_rowWeight="4"
        android:gravity="top|left"
        android:padding="5dp" />
    <TextView
        android:id="@+id/dexterityLabel"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/dexterity_label"
        android:padding="5dp"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/dexterityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:padding="5dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/constitutionLabel"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/constitution_label"
        android:padding="5dp"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/constitutionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:padding="5dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/equipmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipment_label"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_columnSpan="2"
        android:layout_columnWeight="4"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/equipmentValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="4"
        android:layout_row="8"
        android:layout_rowSpan="5"
        android:layout_rowWeight="1"
        android:gravity="top|left" />
    <TextView
        android:id="@+id/intelligenceLabel"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/intelligence_label"
        android:padding="5dp"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/intelligenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:padding="5dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/wisdomLabel"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/wisdom_label"
        android:padding="5dp"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/wisdomValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="11"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:padding="5dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/charismaLabel"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/charisma_label"
        android:padding="5dp"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/charismaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="13"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:padding="5dp"
        android:gravity="center"/>
    <Button
        android:id="@+id/statsButton"
        android:layout_column="1"
        android:layout_row="13"
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="2"
        android:text="@string/roll_stats_button"
        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>
</GridLayout>
